Changes for 1.6.5

 - [ZBX-942] fixed error message for server and proxy if cannot bind a port (Alexei)
 - [ZBX-940] fixed bug with not initialized array variable (Vedmak)
 - [ZBX-939] fixed IPC semaphore related issue when starting Zabbix daemons (Alexei)
 - [ZBX-938] fixed usage of 'color' in en_gb locale (Richlv)
 - [ZBX-937] fixed possible server crash while processing IPMI remote command (Sasha)
 - [ZBX-936] fixed saving flexible intervals to items linked to templates (Artem)
 - [ZBX-932] fixed typo in changelog (Richlv)
 - [ZBX-931] fixed timeout handling for agent's user parameters (Alexei)
 - [ZBX-889] fixed possible bug in media types form (Artem)
 - [ZBX-927] removed default values for text and blob fields in the upgrade script for compatibility with MySQL 5.0 (Sasha)
 - [ZBX-719] fixed typo in default graph title (Richlv)
 - [ZBX-859] fixed typo in server log message (Richlv)
 - [ZBX-848] fixed typos in changelog and comments (Richlv)
 - [ZBX-926] fixed exporting after preview (Artem)
 - [ZBX-925] fixed verification of IPv6 adresses in frontend (Sasha)
 - [ZBX-918, ZBX-919] fixed compilation errors for 'unknown' platforms (Alexei)
 - [ZBX-922] fixed selection proper hosts for hosts-groups assign (Artem)
 - [ZBX-559] fixed wrong format of input file in help info of zabbix_sender (Alexei)
 - [DEV-381] added printing of SVN revision number to all binaries (Alexei)
 - [ZBX-914] fixed SQL error while updating configuration tables on the proxy side (Sasha)
 - [ZBX-910] Queue/Details screen now has "Delayed at" column (Sasha)
 - [ZBX-910] Queue/Details screen now displays only 500 records (Sasha)
 - [ZBX-910] fixed incorrect values for proxy items in the Queue in case of time difference between server and the proxy (Sasha)
 - [ZBX-885] removed unused test code from Zabbix agent (Alexei)
 - [ZBX-887] fixed typo in "Not accessible resources" (Alexei)
 - [DEV-329] fixed server crash if PostgreSQL transaction fails (Sasha)